# dotfiles

./: .clang-format  .clang-tidy  .clangd  .tmux.conf  .zshrc  CMakeLists.txt  Dracula.xml  README.md  bashrc  config.txt  config.yaml  hyprland.conf  init.lua  keybindings.json  keymap.json  keymaps.lua  kitty.conf  options.lua  run.sh  run.sh.python  searxng  settings.json  vencord-settings-backup-2024-12-25.json  wezterm (1).lua  wezterm.lua  workspace.json  yazi.toml
.config/nvim/: init.lua
.config/nvim/lua/core/: options.lua
.config/yazi/: init.lua
